Clean initial commit for server only

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,10 @@ JWT_EXPIRE=7d
 # Server
 PORT=5000
 NODE_ENV=development
-CLIENT_URL=http://localhost:3000
+# Comma-separated list of allowed frontend origins (no trailing slashes)
+CLIENT_URLS=http://localhost:3000
+# Deprecated (use CLIENT_URLS instead)
+# CLIENT_URL=http://localhost:3000
 
 # Cloudinary (for image uploads)
 CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
@@ -16,10 +19,15 @@ CLOUDINARY_API_KEY=your_cloudinary_api_key
 CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 
 # AI APIs
-HUGGINGFACE_API_KEY=your_huggingface_api_key
+# Note: The backend expects HUGGING_FACE_API_KEY (with underscore)
+HUGGING_FACE_API_KEY=your_huggingface_api_key
 OPENFDA_API_KEY=your_openfda_api_key
 IBM_GRANITE_API_KEY=your_ibm_granite_api_key
 LIBRETRANSLATE_API_KEY=your_libretranslate_api_key
+
+# AI Processing Flags
+# Set to 'true' to enable Jimp preprocessing for OCR; set to 'false' to skip (recommended if prod fails)
+AI_PREPROCESS=false
 
 # Mapbox
 MAPBOX_ACCESS_TOKEN=your_mapbox_access_token
